[project]
name = "cosmic-pi-polar-viz"
version = "0.1.0"
description = "Polar stereographic visualization of cosmic ray muon measurements collected during the Transglobal Car Expedition using Cosmic Pi detectors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "geopandas>=1.1.2",
    "scipy>=1.14.0",
]

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 13

[tool.ruff.lint.mccabe]
max-complexity = 12
