[project]
name = "cosmic-pi-transglobal-viz"
version = "0.1.0"
description = "Polar stereographic visualization of cosmic ray muon measurements collected during the Transglobal Car Expedition using Cosmic Pi detectors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "geopandas>=1.1.2",
    "pyarrow>=19.0.0",
    "python-geohash>=0.8.5",
    "requests>=2.32.0",
    "scipy>=1.14.0",
    "typer>=0.15.0",
]

[project.scripts]
cosmic-pi = "cosmic_pi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cosmic_pi"]

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 13

[tool.ruff.lint.mccabe]
max-complexity = 12
